[package]
name = "darkforest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
hex = "0.4"
rand = "0.8"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
socket2 = { version = "0.5", features = ["all"] }
unicode-width = "0.2"
